# fastApiProject_sqlite

./: .dockerignore  .test.db  Dockerfile  README.md  crud.py  database.py  main.py  main_test.py  models.py  pyproject.toml  requirements.txt  schemas.py  sql_software.db  test_main.http  test_main.py
web_app/: crud.py  main.py  main_test.py  models.py  schemas.py  sql_software.db  test_database_config.py  test_main.py
