[tool.poetry]
name = "fastapiproject1"
version = "0.1.0"
description = ""
authors = ["MissBlumarine <miss_blumarine01@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.1"
pytest = "^7.2.2"
uvicorn = "^0.21.0"
sqlalchemy = "^2.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
